assets/style.css
/* ... */
.sea_bottom .catalog {
	max-width: 85%;
	width: 108.8vh;
	margin: 0 auto; 
	height: calc(100% - 3vh - 6.4vh - .4vh);
	display: flex;
	flex-wrap: wrap;
	padding: 8.8vh 0 0;
}

.sea_bottom .catalog_item {
	padding: 1.6vh;
	display: flex;
	min-height: 32vh;
}
.sea_bottom .catalog_link {
	display: flex;
	flex-direction: column;
	color: inherit;
	text-decoration: none;
	width: 100%;
	height: 100%;
	border: none;
	outline: none;
	background: transparent;
	text-align: center;
	padding: 0;
}
.sea_bottom .link_image {
	margin: 3.2vh auto 4vh;
	width: 13.2vh;
	min-width: 13.2vh;
	height: 13.2vh;
}
.sea_bottom .catalog_link span {
	display: block;
	font-weight: bold;
	font-size: 18px;
	text-align: center;
	letter-spacing: 0.04em;
	font-family: 'Caviar Dreams', sans-serif;
}
.sea_bottom .catalog_link .link_title {
	width: 100%;
}
.sea_bottom .catalog_link span small {
	display: block;
	width: 100%;
	font-weight: normal;
	font-size: 12px;
}
.sea_bottom .catalog_arrows {
	display: flex;
	align-items: center;
	justify-content: center;
	margin: auto auto 0;
}
.sea_bottom .catalog_arrow {
	position: static;
	display: flex;
	align-items: center;
	width: 4vh;
	height: 4vh;
	margin: 0 5.6vh;
}
.sea_bottom .catalog_arrow--next {
	transform: rotate(180deg);
}
.sea_bottom .catalog .glider {
	overflow: hidden;
}
.sea_bottom .to-top {
	display: block;
	width: 7.2vh;
	height: 12.2vh;
	position: absolute;
	bottom: 7.2vh;
	right: 7.2vh;
	border: none;
	padding: 0;
	margin: 0;
	text-align: center;
	color: white;
	font-weight: bold;
	font-size: 2vh;
	line-height: 2.5vh;
	background: transparent;
	cursor: pointer;
}
.sea_bottom .to-top img {
	width: 4.8vh;
	height: 4.8vh;
	margin: 0 auto 2.4vh;
}
.sea_bottom .contact {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 13.8vh;
	height: 14.7vh;
	position: absolute;
	left: 5.5vh;
	bottom: 20.7vh;
	border: none;
	padding: 0;
	margin: 0;
	text-align: center;
	cursor: pointer;
	background: transparent url('images/text-bubble.svg') no-repeat center / 100%;
	padding: 3.9vh 0.6vh 5.6vh 1.2vh;
	letter-spacing: 0.08em;
	text-transform: uppercase;
	font-weight: bold;
	font-size: 1.4vh;
	line-height: 1.5;
}
.sea_bottom .basket {
	display: block;
	width: 16.8vh;
	height: 0;
	position: absolute;
	top: -5px;
	right: 13.7vh;
	padding: 0;
	margin: 0;
	border: none;
	outline: none;
	background: transparent;
	overflow: hidden;
	transform: translateY(-23.9vh);
	transition: transform .3s ease-in-out;
}
.sea_bottom .basket.active {
	height: 23.9vh;
	transform: translateY(0);
}
.popup {
	position: fixed;
	overflow: hidden;
	z-index: 2000;
}
.popup_inner {
	background: #FFFFFF;
	display: flex;
	flex-direction: column;
	padding: 44px 48px 48px;
	min-width: 560px;
	min-height: 100vh;
	overflow-y: auto;
}
.popup_back {
	display: flex;
	align-items: center;
	background: transparent;
	padding: 0;
	margin: 0 0 4vh;
	border: none;
	font-size: 14px;
	line-height: 16px;
	letter-spacing: 0.16em;
	text-transform: uppercase;
}
.popup_back img {
	height: 20px;
	margin-right: 25px;
	width: auto;
}
.popup_title {
	font-weight: normal;
	font-size: 48px;
	line-height: 56px;
	margin: 0 0 4vh;
}
.popup_subtitle {
	font-weight: normal;
	font-size: 16px;
	line-height: 19px;
	margin: 0 0 4vh;
}
.popup_form {
	margin: auto 0;
	width: 100%;
}
.popup_input {
	width: 100%;
	display: block;
	margin: 0 0 3.2vh;
}
.popup_input input {
	outline: none;
	display: block;
	width: 100%;
	background: transparent;
	border: 1px solid #263C43;
	box-sizing: border-box;
	border-radius: 4px;
	padding: 21px 32px 19px;
	letter-spacing: 0.08em;
	text-transform: uppercase;
	font-size: 12px;
	line-height: 15px;
}
.popup_input-group {
	display: flex;
	position: relative;
	align-items: center;
	margin: 0 0 3.2vh;
	height: 58px;
}
.popup_confirm {
	padding: 20px 20px 19px;
	background: #DA7A4F;
	border-radius: 4px;
	display: block;
	width: 100%;
	text-align: center;
	letter-spacing: 0.08em;
	text-transform: uppercase;
	font-weight: bold;
	font-size: 14px;
	line-height: 18px;
	color: white;
	border: none;
	margin: 4vh 0 0;
}
.popup_checkbox {
	position: relative;
}
.popup_checkbox label {
	position: relative;
	padding: 0 0 0 42px;
	font-weight: bold;
	font-size: 12px;
	line-height: 15px;
	display: block;
	cursor: pointer;
}
.popup_checkbox label:before {
	content: '';
	display: block;
	width: 18px;
	height: 18px;
	border: 2px solid #C4C4C4;
	box-sizing: border-box;
	border-radius: 2px;
	position: absolute;
	top: 0;
	left: 0;
}
.popup_checkbox label:after {
	content: '';
	display: block;
	width: 12px;
	height: 12px;
	background: #C4C4C4;
	box-sizing: border-box;
	border-radius: 2px;
	position: absolute;
	top: 3px;
	left: 3px;
	opacity: 0;
}
.popup_checkbox input:checked + label:after {
	opacity: 1;
}
.popup_radio {
	position: relative;
	width: 50%;
}
.popup_radio label {
	position: relative;
	padding: 0 0 0 46px;
	font-weight: bold;
	font-size: 14px;
	line-height: 18px;
	letter-spacing: 0.08em;
	display: block;
	cursor: pointer;
}
.popup_radio label:before {
	content: '';
	display: block;
	width: 22px;
	height: 22px;
	border: 2px solid #C4C4C4;
	box-sizing: border-box;
	border-radius: 50%;
	position: absolute;
	top: 50%;
	left: 0;
	transform: translateY(-50%);
}
.popup_radio label:after {
	content: '';
	display: block;
	width: 12px;
	height: 12px;
	background: #C4C4C4;
	box-sizing: border-box;
	border-radius: 50%;
	position: absolute;
	top: 50%;
	left: 5px;
	opacity: 0;
	transform: translateY(-50%);
}
.popup_radio input:checked + label:after {
	opacity: 1;
}
.popup_total-sum {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	margin: 0 0 1.6vh;
}
.total_title {
	font-size: 32px;
	line-height: 37px;
}
.total_sum {
	font-size: 32px;
	line-height: 41px;	
	font-weight: bold;
}



#contact {
	width: 0;
	height: 100%;
	top: 0;
	left: 0;
	transition: width .4s ease-in-out;
}
#contact.show {
	width: 100%;
}
#contact .popup_inner {
	height: 100%;
	max-width: 560px;
	width: 40%;
}
/* ... */

